crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_missing_vault_screen.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
assertion_line: 70
expression: "render_to_text(&state, 80, 12)"
---
┌ Paladin ─────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  No vault found at:                                                          │
│  /var/lib/paladin/vault.bin                                                  │
│                                                                              │
│  Run `paladin init` to create one.                                           │
│                                                                              │
│  Press Esc, q, or Ctrl-C to quit.                                            │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
