crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_passphrase_modal_change_default.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: "render_to_text(&state, snapshot_now(), 80, 20)"
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│                                                                              │
│                      No accounts. Press `a` to add one.                      │
│       ┌ Change passphrase ───────────────────────────────────────────┐       │
│       │ Re-encrypts this vault under a new passphrase.               │       │
│       │                                                              │       │
│       │ Passphrase:  [  ]                                            │       │
│       │ Confirm:     [  ]                                            │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                  Enter submit  ·  Esc cancel                 │       │
│       └──────────────────────────────────────────────────────────────┘       │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [n] next-HOTP  [a] add  [/] find                    │
└──────────────────────────────────────────────────────────────────────────────┘
