crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_passphrase_modal_confirmation_mismatch.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: rendered
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│                                                                              │
│                      No accounts. Press `a` to add one.                      │
│       ┌ Set passphrase ──────────────────────────────────────────────┐       │
│       │ Encrypts this vault under a new passphrase.                  │       │
│       │                                                              │       │
│       │ Passphrase:  [  ]                                            │       │
│       │ Confirm:     [  ]                                            │       │
│       │                                                              │       │
│       │ invalid passphrase: confirmation_mismatch                    │       │
│       │                                                              │       │
│       │                  Enter submit  ·  Esc cancel                 │       │
│       └──────────────────────────────────────────────────────────────┘       │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [n] next-HOTP  [a] add  [/] find                    │
└──────────────────────────────────────────────────────────────────────────────┘
